--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   "description": "This template should help get you started developing with Vue 3 in Vite.",
   "main": "vite.config.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Alfie213/vtbLanding.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Alfie213/vtbLanding/issues"
+  },
+  "homepage": "https://github.com/Alfie213/vtbLanding#readme"
 }
